# modern-pdf-lib

./: .eslintrc.cjs  .gitattributes  .gitignore  .oxlintrc.json  CHANGELOG.md  CONTRIBUTING.md  GAP-ANALYSIS.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  VERSIONING.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.cli.json  tsconfig.json  tsdown.config.ts  typedoc.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: getting-started.md  index.md
docs/.vitepress/: config.ts
docs/api/: index.md
docs/guide/: accessibility.md  annotations.md  barcodes.md  batch-processing.md  browser.md  builder.md  cookbook.md  coordinates.md  csp.md  fonts.md  form-scripts.md  framework-integration.md  headers-footers.md  image-formats.md  image-optimization.md  images.md  jpeg2000.md  multi-sign.md  pdf2.md  pdfa.md  pdfx.md  performance.md  plugins.md  rendering.md  security.md  shapes.md  signatures.md  spot-colors.md  streaming-parser.md  streaming.md  tables.md  text-layout.md  text.md  troubleshooting.md  verification.md
docs/migration/: from-pdf-lib.md
docs/plans/: 2026-02-25-complete-expansion-design.md  2026-02-25-pdflib-parity-design.md  2026-02-25-pdflib-parity-plan.md  2026-02-26-pdf-lib-parity.md  2026-03-06-roadmap-0.15.2-to-1.0.0.md  2026-03-06-v0.15.2-to-v0.19.10-implementation.md  api-audit-results.md
docs/playground/: index.md
scripts/: build-iife.ts  build-wasm-ci.sh  build-wasm.sh  finalize-dts.mjs  gen-fixtures.ts  gen-reference-pdf.ts  gen-showcase-pdf.ts  generate-inline-wasm.ts  sanitize-api-docs.ts  smoke-dist.mjs  test-roundtrip.ts  validate-pdf.ts  verapdf-validate.ts  verify-api.ts
src/: browser.ts  create.ts  errors.ts  forms.ts  index.ts  parse.ts
src/accessibility/: accessibilityChecker.ts  autoTag.ts  index.ts  markedContent.ts  namespaces.ts  pdfUa2.ts  pdfUaValidator.ts  structureTree.ts  taggingHelpers.ts
src/annotation/: appearanceGenerator.ts  applyRedactions.ts  index.ts  pdfAnnotation.ts
src/barcode/: code128.ts  code39.ts  dataMatrix.ts  ean.ts  index.ts  itf.ts  pdf417.ts  qr.ts  reader.ts  style.ts  types.ts  upc.ts
src/batch/: batchProcessor.ts
src/browser/: download.ts  serviceWorker.ts  worker.ts
src/cli/: index.ts  optimize.ts
src/color/: colorConvert.ts  iccTransform.ts
src/compliance/: afAttach.ts  associatedFiles.ts  ciiReader.ts  eInvoiceValidate.ts  encryptedPayload.ts  enforcePdfAv2.ts  facturX.ts  facturXAssemble.ts  index.ts  outputIntent.ts  pageOutputIntent.ts  pdfA.ts  pdfA4.ts  pdfAProfiles.ts  pdfVT.ts  pdfX6.ts  pdfxCompliance.ts  profileConvert.ts  rasterProfile.ts  srgbIccProfile.ts  stripProhibited.ts  toUnicodeCmap.ts  transparencyFlattener.ts  validationReport.ts  xRechnung.ts  xmpGenerator.ts  xmpValidator.ts
src/compression/: deflate.ts  fflateAdapter.ts  libdeflateWasm.ts  zstdCache.ts
src/core/: collections.ts  colorSpacesCIE.ts  documentMerge.ts  documentParts.ts  embeddedFiles.ts  enums.ts  halftone.ts  imageMask.ts  incrementalWriter.ts  layout.ts  linearization.ts  meshShading.ts  outlines.ts  pageLabels.ts  pageManipulation.ts  patterns.ts  pdfCatalog.ts  pdfDocument.ts  pdfDocumentBuilder.ts  pdfDocumentEmbed.ts  pdfEmbed.ts  pdfFunctions.ts  pdfObjects.ts  pdfPage.ts  pdfPageSvg.ts  pdfPageText.ts  pdfStream.ts  pdfWriter.ts  pieceInfo.ts  redaction.ts  requirements.ts  shadingFunction.ts  softMask.ts  watermark.ts
src/crypto/: aes.ts  encryptionHandler.ts  index.ts  keyDerivation.ts  md5.ts  permissions.ts  rc4.ts  sha256.ts
src/form/: acrobatBuiltins.ts  acrobatDateBuiltins.ts  acrobatSpecialBuiltins.ts  calculationOrder.ts  documentScripts.ts  fieldAppearance.ts  fieldReferences.ts  fieldValidation.ts  fieldVisibility.ts  formFlatten.ts  index.ts  jsEvaluator.ts  pdfField.ts  pdfForm.ts  schemaForm.ts  scriptSandbox.ts
src/jsx/: jsxRuntime.ts
src/layers/: index.ts  optionalContent.ts
src/layout/: headerFooter.ts  index.ts  overflow.ts  presets.ts  table.ts  textLayout.ts
src/metadata/: index.ts  pdfViewerPreferences.ts  viewerPreferences.ts  xmpMetadata.ts
src/outline/: index.ts  pdfOutline.ts
src/parser/: index.ts  (+22 more)
src/wasm/jpeg/: Cargo.toml  bridge.ts
src/wasm/jpeg/src/: lib.rs
src/wasm/libdeflate/: Cargo.toml
src/wasm/libdeflate/src/: lib.rs
src/wasm/png/: Cargo.toml
src/wasm/png/src/: lib.rs
src/wasm/shaping/: Cargo.toml
src/wasm/shaping/src/: lib.rs
src/wasm/ttf/: Cargo.toml
src/wasm/ttf/src/: lib.rs
(+1398 files in other folders)
