[package]
name = "modern-pdf-deflate"
version = "0.1.0"
edition = "2024"
description = "WASM-compiled deflate compression for the modern-pdf library"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.114"
flate2 = "1.1.9"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext"]

[profile.release]
# Optimize for small binary size -- critical for WASM delivery
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
