[package]
name = "modern-pdf-png"
version = "0.1.0"
edition = "2024"
description = "WASM-compiled PNG decoder for the modern-pdf library"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.113"
png = "0.18.1"

[profile.release]
# Optimize for small binary size -- critical for WASM delivery
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
