[package]
name = "modern-pdf-shaping"
version = "0.1.0"
edition = "2024"
description = "WASM-compiled text shaping engine for the modern-pdf library"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.114"
rustybuzz = "0.20.1"
ttf-parser = "0.25.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext"]

[profile.release]
# Optimize for small binary size -- critical for WASM delivery
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
