[package]
name = "modern-pdf-ttf"
version = "0.1.0"
edition = "2024"
description = "WASM-compiled TrueType font parser for the modern-pdf library"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.113"
ttf-parser = "0.25.1"

[profile.release]
# Optimize for small binary size -- critical for WASM delivery
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
